--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/video-player": "^5.16.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/storage": "^2.2.0",
+    "@types/chart.js": "^2.8.10",
+    "chart.js": "^2.9.2",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^3.0.0",
     "core-js": "^2.5.4",
+    "highcharts": "^7.2.1",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -74,7 +80,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "com.moust.cordova.videoplayer": {}
     },
     "platforms": [
       "android"
