--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
     "@types/chart.js": "^2.8.10",
     "chart.js": "^2.9.2",
     "com.moust.cordova.videoplayer": "https://github.com/moust/cordova-plugin-videoplayer.git",
-    "cordova-android": "7.0.0",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-sqlite-storage": "^3.0.0",
+    "cordova-sqlite-storage": "^3.4.1",
     "core-js": "^2.5.4",
     "highcharts": "^7.2.1",
     "ng2-charts": "^2.3.0",
@@ -85,8 +85,6 @@
       "com.moust.cordova.videoplayer": {},
       "cordova-plugin-local-notification": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
